[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/test.gd" type="Script" id=1]
[ext_resource path="res://scripts/start_scren_camera.gd" type="Script" id=2]
[ext_resource path="res://scripts/start_scren_spawner.gd" type="Script" id=3]
[ext_resource path="res://scripts/save_system.gd" type="Script" id=4]
[ext_resource path="res://godot_stuff/tile_set.tres" type="TileSet" id=5]
[ext_resource path="res://assets/tileset/inside.png" type="Texture" id=6]
[ext_resource path="res://assets/Audio/Music_menu.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/shaders/fog.shader" type="Shader" id=8]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://scripts/buttons.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 2.58359

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 8 )
shader_param/color = Vector3( 0.35, 0.48, 0.95 )
shader_param/OCTAVES = 4

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 70
outline_size = 3
outline_color = Color( 0.984314, 0.972549, 0.972549, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
size = 65
outline_size = 3
outline_color = Color( 0.984314, 0.972549, 0.972549, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=10]
size = 50
outline_size = 3
outline_color = Color( 0.984314, 0.972549, 0.972549, 1 )
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=11]
resource_name = "fade_in"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.321569, 0.321569, 0.321569, 1 ), Color( 0.321569, 0.321569, 0.321569, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("buttonss:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 102.096, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("buttonss:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.321569, 0.321569, 0.321569, 0 ), Color( 0.321569, 0.321569, 0.321569, 1 ) ]
}

[node name="start_screen" type="Node"]

[node name="test" type="Node" parent="."]
script = ExtResource( 1 )
camera_move = true

[node name="game_spawner" type="Control" parent="test"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="again" type="Timer" parent="test/game_spawner"]
wait_time = 0.01
one_shot = true

[node name="dif" type="Timer" parent="test/game_spawner"]
wait_time = 5.0
autostart = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="test"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="test/ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="bg" type="Sprite" parent="test/ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 8.02112, 5.07647 )
z_index = -1
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="camera_trans" type="KinematicBody2D" parent="test"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="camera" type="Camera2D" parent="test/camera_trans"]
position = Vector2( 0, 37.3933 )
anchor_mode = 0
current = true
process_mode = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="test/camera_trans"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="tiles" type="TileMap" parent="test"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 262144, 0, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 2, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="test"]
stream = ExtResource( 7 )
autoplay = true

[node name="save_system" type="Control" parent="test"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="test"]

[node name="fog" type="Sprite" parent="test/CanvasLayer"]
modulate = Color( 0.321569, 0.321569, 0.321569, 1 )
material = SubResource( 2 )
scale = Vector2( 8.02112, 5.07647 )
z_index = -1
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="buttons" type="Control" parent="test/CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="buttonss" type="Node2D" parent="test/CanvasLayer/buttons"]
modulate = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="start" type="Button" parent="test/CanvasLayer/buttons/buttonss"]
anchor_left = 8.92
anchor_top = 2.504
anchor_right = 16.12
anchor_bottom = 4.604
margin_left = 261.132
margin_top = 152.353
margin_right = 611.132
margin_bottom = 222.353
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0.658824, 0.658824, 0.694118 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0.219608 )
enabled_focus_mode = 0
text = "start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shop" type="Button" parent="test/CanvasLayer/buttons/buttonss"]
anchor_left = 8.92
anchor_top = 2.504
anchor_right = 16.12
anchor_bottom = 4.604
margin_left = 390.285
margin_top = 296.58
margin_right = 650.285
margin_bottom = 361.58
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0.658824, 0.658824, 0.694118 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0.219608 )
enabled_focus_mode = 0
text = "shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="test/CanvasLayer/buttons/buttonss"]
anchor_left = 8.92
anchor_top = 2.504
anchor_right = 16.12
anchor_bottom = 4.604
margin_left = 497.696
margin_top = 435.468
margin_right = 697.696
margin_bottom = 485.468
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0.658824, 0.658824, 0.694118 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0.219608 )
enabled_focus_mode = 0
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="test/CanvasLayer/buttons"]
anims/fade_in = SubResource( 11 )
anims/fade_out = SubResource( 12 )

[node name="fade" type="Sprite" parent="test/CanvasLayer/buttons"]
modulate = Color( 0.321569, 0.321569, 0.321569, 1 )
scale = Vector2( 8.02112, 5.07647 )
z_index = 5
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}
[connection signal="timeout" from="test/game_spawner/again" to="test/game_spawner" method="_on_again_timeout"]
[connection signal="timeout" from="test/game_spawner/dif" to="test/game_spawner" method="_on_dif_timeout"]
[connection signal="pressed" from="test/CanvasLayer/buttons/buttonss/start" to="test/CanvasLayer/buttons" method="_on_start_pressed"]
[connection signal="pressed" from="test/CanvasLayer/buttons/buttonss/shop" to="test/CanvasLayer/buttons" method="_on_shop_pressed"]
[connection signal="pressed" from="test/CanvasLayer/buttons/buttonss/exit" to="test/CanvasLayer/buttons" method="_on_exit_pressed"]
[connection signal="animation_finished" from="test/CanvasLayer/buttons/AnimationPlayer" to="test/CanvasLayer/buttons" method="_on_AnimationPlayer_animation_finished"]
